Func working as asked in the test, css need to be polished

--- a/src/scss/custom.scss
+++ b/src/scss/custom.scss
@@ -5,3 +5,16 @@
 .text-align{
     text-align: center;
 }
+
+.bg-red{
+    background: #f76c6c;
+    color: #fff;
+}
+
+.custom-padding{
+    padding: 0.25em 0;
+}
+
+.custom-margin{
+    margin: 2em 0 4em 0;
+}
